@@ -63,7 +63,7 @@
 #include "gam_kqueue.h"
 #include "gam_event.h"
 #include "gam_server.h"
-#include "gam_poll.h"
+#include "gam_poll_basic.h"
 
 /*** tunable constants, modify to tweak the backend aggressivity *************/
 
@@ -1168,10 +1168,10 @@ gam_kqueue_init (void)
   g_io_add_watch(channel, G_IO_IN, gam_kqueue_kevent_cb, NULL);
 
   
-  gam_poll_set_kernel_handler(NULL, NULL, GAMIN_K_KQUEUE);
-  gam_backend_add_subscription = gam_kqueue_add_subscription;
-  gam_backend_remove_subscription = gam_kqueue_remove_subscription;
-  gam_backend_remove_all_for = gam_kqueue_remove_all_for;
+  gam_server_install_kernel_hooks(GAMIN_K_KQUEUE,
+  				  gam_kqueue_add_subscription,
+				  gam_kqueue_remove_subscription,
+				  gam_kqueue_remove_all_for, NULL, NULL);
 
   return TRUE;
 }
