@@ -342,8 +342,12 @@ gam_poll_basic_poll_file(GamNode * node)
 	} else {
 #ifdef VERBOSE_POLL
 		GAM_DEBUG(DEBUG_INFO, "Poll: poll_file %s unchanged\n", path);
+#ifdef ST_MTIM_NSEC
 		GAM_DEBUG(DEBUG_INFO, "%d %d : %d %d\n", node->sbuf.st_mtim.tv_sec, node->sbuf.st_mtim.tv_nsec, sbuf.st_mtim.tv_sec, sbuf.st_mtim.tv_nsec);
-#endif
+#else
+		GAM_DEBUG(DEBUG_INFO, "%d : %d\n", node->sbuf.st_mtime, sbuf.st_mtim.tv_nsec);
+#endif /* ST_MTIM_NSEC */
+#endif /* VERBOSE_POLL */
 	}
 
 	/*
